--- a/components/_header.scss
+++ b/components/_header.scss
@@ -1,8 +1,11 @@
+
 header{
     h1{
+        
         text-align: center;
+        font-size: 3.8rem;
         span{
-            font-size: 20px;
+            font-size: 2rem;
         }
 }
 }
