--- a/components/_header.scss
+++ b/components/_header.scss
@@ -3,9 +3,10 @@ header{
     h1{
         
         text-align: center;
-        font-size: 3.8rem;
+        font-size: nth($font-size,2);
+        font-weight: nth($font-weight ,3 );
         span{
-            font-size: 2rem;
+            font-size: nth($font-size ,1 );
         }
 }
 }
