--- a/scss/bases/_generales.scss
+++ b/scss/bases/_generales.scss
@@ -13,3 +13,10 @@ html {
         font-family: "Noto Sans", sans-serif;
     }
 }
+
+//! CLASES GENERALES
+
+.contenedor{
+    width: 120rem;
+    margin: 0 auto;
+}
