--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -1,8 +1,10 @@
-$color-principal:#98E4FF;
+// !PALETA DE COLORES
+$color-principal:#687EFF;
 $colo-secundario: black;
 $color-terciario:#687EFF;
 $color-cuarto: white ;
 
+// !ESTILO DE FUENTES
 $font-size: 2rem, 3rem, 4rem, 5rem;
 $font-weight: 200, 400, 700;
 
