--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,6 @@
-@import "../bases/variables";
-@import "../bases/generales";
-@import "../components/header";
-@import "../components/nav";
-@import "../components/index";
-@import "../components/footer";
+@import "./bases/variables";
+@import "./bases/generales";
+@import "./components/header";
+@import "./components/nav";
+@import "./components/index";
+@import "./components/footer";
