--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -1,7 +1,7 @@
 // !PALETA DE COLORES
 $color-principal:#687EFF;
-$colo-secundario: black;
-$color-terciario:#687EFF;
+$color-secundario: black;
+$color-terciario:#006185;
 $color-cuarto: white ;
 
 // !ESTILO DE FUENTES
