--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,9 @@
 
 header{
+    height: 5rem;
     h1{
-        
+        height: 100%;
+        margin: 0rem;
         text-align: center;
         font-size: nth($font-size,2);
         font-weight: nth($font-weight ,3 );
