--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,18 +1,32 @@
 .navBg {
     background-color: $color-principal ;
+    width: 100%;
 
     .navPrincipal {
         display: flex;
         justify-content: space-around;
         align-items: center;
-        height: 5rem;
-        padding: 0.5rem;
+        height: 4rem;
+        width: 100%;
 
         a {
+            padding: 0.5rem;
             font-size: nth($font-size , 1);
             font-weight: nth($font-weight, 2);
             color: $color-cuarto;
             text-decoration: none;
+            &:hover{
+                color: $color-secundario;
+            }
         }
     }
+}
+.hero{
+    text-align: center;
+    height:calc(100vh - 9rem);
+    // h2{
+    // }
+    // .imgCheckpoint{}
+    // p{}
+    // a{}
 }
