--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,5 +2,6 @@
 @import "./bases/generales";
 @import "./components/header";
 @import "./components/nav";
+@import "./components/hero";
 @import "./components/index";
 @import "./components/footer";
