--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;400;700&display=swap");
+.hero .contenidoHero a {
+  background-color: #687EFF;
+  color: black;
+  font-size: 2rem;
+  text-decoration: none;
+  padding: 0.5rem; }
+
 html {
   font-size: 62.5%;
   margin: 0rem;
@@ -19,6 +26,13 @@ html {
     html body p {
       font-size: 2rem;
       font-weight: 200; }
+    html body h1, html body h2, html body h3 {
+      text-align: center; }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
 
 .contenedor {
   width: 120rem;
@@ -29,7 +43,6 @@ header {
   header h1 {
     height: 100%;
     margin: 0rem;
-    text-align: center;
     font-size: 3rem;
     font-weight: 700; }
     header h1 span {
@@ -53,9 +66,24 @@ header {
       .navBg .navPrincipal a:hover {
         color: black; }
 
-.mainIndex .hero {
-  text-align: center;
-  height: calc(100vh - 9rem); }
-  .mainIndex .hero h2 span {
-    font-size: 2rem;
-    font-weight: 700; }
+.hero {
+  height: 30rem;
+  width: 100%;
+  padding: 1rem;
+  margin: 0.5rem 0rem 0.5rem 0rem;
+  background-image: url(../../img/hero.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; }
+  .hero .contenidoHero {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .hero .contenidoHero h2 span {
+      font-size: 2rem;
+      font-weight: 700; }
+    .hero .contenidoHero .heroUbicacion {
+      display: flex;
+      align-items: baseline; }
+    .hero .contenidoHero a {
+      color: white; }
