--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,23 @@
   color: black;
   font-size: 2rem;
   text-decoration: none;
-  padding: 0.5rem; }
+  padding: 0.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-radius: 0.5rem; }
+
+.hero .contenidoHero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
 html {
   font-size: 62.5%;
   margin: 0rem;
   padding: 0rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  background: linear-gradient(to top, rgba(224, 224, 224, 0.5) 0%, #ffffff 100%); }
   html body {
     font-size: 16px;
     font-family: "Noto Sans", sans-serif; }
@@ -37,6 +47,13 @@ html {
 .contenedor {
   width: 120rem;
   margin: 0 auto; }
+
+.sombra {
+  box-shadow: 0px 0px 11px 1px rgba(122, 120, 120, 0.38);
+  -webkit-box-shadow: 0px 0px 11px 1px rgba(122, 120, 120, 0.38);
+  -moz-box-shadow: 0px 0px 11px 1px rgba(122, 120, 120, 0.38);
+  padding: 3rem;
+  border-radius: 1rem; }
 
 header {
   height: 5rem; }
@@ -70,20 +87,55 @@ header {
   height: 30rem;
   width: 100%;
   padding: 1rem;
-  margin: 0.5rem 0rem 0.5rem 0rem;
+  margin: 1rem 0rem 2rem 0rem;
   background-image: url(../../img/hero.jpg);
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  position: relative; }
   .hero .contenidoHero {
-    margin-top: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    .hero .contenidoHero h2 span {
-      font-size: 2rem;
-      font-weight: 700; }
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.548); }
+    .hero .contenidoHero h2 {
+      color: white; }
+      .hero .contenidoHero h2 span {
+        font-size: 2rem;
+        font-weight: 700; }
     .hero .contenidoHero .heroUbicacion {
       display: flex;
       align-items: baseline; }
+      .hero .contenidoHero .heroUbicacion p {
+        color: white;
+        font-weight: 400; }
     .hero .contenidoHero a {
       color: white; }
+
+.mainIndex {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: white; }
+  .mainIndex .serviciosIndex {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem; }
+    .mainIndex .serviciosIndex .servicio {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .mainIndex .serviciosIndex .servicio h3 {
+        color: #006185; }
+      .mainIndex .serviciosIndex .servicio .iconos {
+        width: 15rem;
+        height: 15rem;
+        background-color: #687EFF;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly; }
+      .mainIndex .serviciosIndex .servicio p {
+        line-height: 2;
+        text-align: center; }
