--- a/scss/bases/_generales.scss
+++ b/scss/bases/_generales.scss
@@ -35,6 +35,7 @@ html {
             text-align: center;
         }
     }
+    background: linear-gradient(to top,rgba(224, 224, 224, 0.5) 0%, #ffffff 100%);
 }
 
 *,
@@ -48,4 +49,12 @@ html {
 .contenedor {
     width: 120rem;
     margin: 0 auto;
+}
+
+.sombra{
+    box-shadow: 0px 0px 11px 1px rgba(122,120,120,0.38);
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(122,120,120,0.38);
+    -moz-box-shadow: 0px 0px 11px 1px rgba(122,120,120,0.38);
+    padding: 3rem;
+    border-radius: 1rem;
 }
