--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -15,4 +15,14 @@ $font-weight: 200, 400, 700;
         font-size: nth($font-size, 1);
         text-decoration: none;
         padding:0.5rem;
+        text-transform: uppercase;
+        font-weight: nth($font-weight,3 );
+        border-radius: 0.5rem;
+}
+
+%centrarFlex{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 }
