--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,18 +2,24 @@
     height: 30rem;
     width: 100%;
     padding: 1rem;
-    margin: 0.5rem 0rem 0.5rem 0rem;
+    margin: 1rem 0rem 2rem 0rem;
     background-image: url(../../img/hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
 
     .contenidoHero {
-        margin-top: 3rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        top: 0;
+        @extend %centrarFlex;
+        background-color: rgba(0, 0, 0, 0.548);
 
         h2 {
+            color: $color-cuarto;
+
             span {
                 font-size: nth($font-size , 1);
                 font-weight: nth($font-weight, 3);
@@ -23,6 +29,11 @@
         .heroUbicacion {
             display: flex;
             align-items: baseline;
+
+            p {
+                color: $color-cuarto;
+                font-weight: nth($font-weight,2 )
+            }
         }
 
         a {
