--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;400;700&display=swap");
-.hero .contenidoHero a {
+.hero .contenidoHero a, .mainIndex .formularioIndex form .botonFormIndex .boton {
   background-color: #687EFF;
-  color: black;
+  color: white;
   font-size: 2rem;
   text-decoration: none;
   padding: 0.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  border-radius: 0.5rem; }
+  border-radius: 0.5rem;
+  border: none; }
 
 .hero .contenidoHero {
   display: flex;
@@ -55,14 +56,12 @@ html {
   padding: 3rem;
   border-radius: 1rem; }
 
-header {
+.header {
   height: 5rem; }
-  header h1 {
+  .header h1 {
     height: 100%;
-    margin: 0rem;
-    font-size: 3rem;
-    font-weight: 700; }
-    header h1 span {
+    margin: 0rem; }
+    .header h1 span {
       font-size: 2rem; }
 
 .navBg {
@@ -110,11 +109,9 @@ header {
       .hero .contenidoHero .heroUbicacion p {
         color: white;
         font-weight: 400; }
-    .hero .contenidoHero a {
-      color: white; }
 
 .mainIndex {
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
   text-align: center;
   background-color: white; }
@@ -139,3 +136,79 @@ header {
       .mainIndex .serviciosIndex .servicio p {
         line-height: 2;
         text-align: center; }
+  .mainIndex .formularioIndex form {
+    background-color: #006185;
+    width: 80%;
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem; }
+    .mainIndex .formularioIndex form fieldset {
+      border: none; }
+      .mainIndex .formularioIndex form fieldset legend {
+        color: white;
+        text-transform: uppercase;
+        margin-bottom: 0.6rem;
+        font-size: 2rem;
+        font-weight: 700; }
+      .mainIndex .formularioIndex form fieldset .camposFormIndex {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem; }
+        .mainIndex .formularioIndex form fieldset .camposFormIndex .campo {
+          margin-bottom: 1rem;
+          text-align: center; }
+        .mainIndex .formularioIndex form fieldset .camposFormIndex .correo, .mainIndex .formularioIndex form fieldset .camposFormIndex .textarea {
+          grid-column: 1 / 3; }
+        .mainIndex .formularioIndex form fieldset .camposFormIndex label {
+          color: white;
+          margin-bottom: 0.6rem;
+          display: block;
+          font-weight: 200;
+          font-size: 2rem;
+          text-align: start; }
+        .mainIndex .formularioIndex form fieldset .camposFormIndex textarea {
+          height: 15rem; }
+        .mainIndex .formularioIndex form fieldset .camposFormIndex .inputText {
+          width: 100%;
+          border: none;
+          padding: 1.5rem;
+          border-radius: 1rem; }
+    .mainIndex .formularioIndex form .botonFormIndex {
+      display: flex;
+      justify-content: flex-end; }
+      .mainIndex .formularioIndex form .botonFormIndex .boton:hover {
+        cursor: pointer; }
+
+@media screen and (max-width: 730px) {
+  .mainIndex .serviciosIndex {
+    grid-template-columns: 1fr; }
+  .mainIndex .formularioIndex form fieldset .camposFormIndex {
+    display: block; } }
+
+@media screen and (max-width: 600px) {
+  .mainIndex .serviciosIndex .servicio .iconos {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%; }
+  .mainIndex .serviciosIndex .servicio p {
+    font-size: 1.5rem; }
+  .mainIndex .formularioIndex form {
+    width: 100%;
+    margin: 0;
+    padding: 1rem; }
+    .mainIndex .formularioIndex form fieldset .botonFormIndex .boton {
+      width: 100%; } }
+
+@media screen and (max-width: 500px) {
+  .mainIndex .formularioIndex form fieldset legend {
+    font-size: 1.5rem; } }
+
+@media screen and (max-width: 435px) {
+  .header h1 {
+    font-size: 3rem;
+    font-weight: 400; } }
+
+@media screen and (max-width: 390px) {
+  .mainIndex .formularioIndex form fieldset legend {
+    font-size: 1.2rem; } }
