--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -11,13 +11,14 @@ $font-weight: 200, 400, 700;
 //!FORMATO BOTONES
 %boton {
         background-color:$color-principal;
-        color: $color-secundario;
+        color: $color-cuarto;
         font-size: nth($font-size, 1);
         text-decoration: none;
         padding:0.5rem;
         text-transform: uppercase;
         font-weight: nth($font-weight,3 );
         border-radius: 0.5rem;
+        border: none;
 }
 
 %centrarFlex{
