--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,11 +1,9 @@
 
-header{
+.header{
     height: 5rem;
     h1{
         height: 100%;
         margin: 0rem;
-        font-size: nth($font-size,2);
-        font-weight: nth($font-weight ,3 );
         span{
             font-size: nth($font-size ,1 );
         }
