--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,5 +1,5 @@
 .mainIndex {
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     text-align: center;
     background-color: $color-cuarto;
@@ -13,9 +13,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            h3{
+
+            h3 {
                 color: $color-terciario;
             }
+
             .iconos {
                 width: 15rem;
                 height: 15rem;
@@ -25,9 +27,84 @@
                 align-items: center;
                 justify-content: space-evenly;
             }
-            p{
+
+            p {
                 line-height: 2;
                 text-align: center;
+            }
+        }
+    }
+
+    .formularioIndex {
+        form {
+            background-color: $color-terciario;
+            width: 80%;
+            margin: 0 auto;
+            padding: 2rem;
+            border-radius: 1rem;
+
+            fieldset {
+                border: none;
+
+                legend {
+                    color: $color-cuarto;
+                    text-transform: uppercase;
+                    margin-bottom: 0.6rem;
+                    font-size: nth($font-size, 1);
+                    font-weight: nth($font-weight, 3);
+                }
+
+                .camposFormIndex {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-template-rows: auto auto 20rem;
+                    column-gap: 1rem;
+
+                    .campo {
+                        margin-bottom: 1rem;
+                        text-align: center;
+                    }
+
+                    .correo,.textarea {
+                        grid-column: 1 / 3;
+                    }
+
+                    label {
+                        color: $color-cuarto;
+                        margin-bottom: 0.6rem;
+                        display: block;
+                        font-weight: nth($font-weight, 1);
+                        font-size: nth($font-size, 1);
+                        text-align: start;
+
+                    }
+
+                    textarea {
+                        height: 15rem;
+                    }
+
+                    .inputText {
+                        width: 100%;
+                        border: none;
+                        padding: 1.5rem;
+                        border-radius: 1rem;
+                    }
+                }
+            }
+
+            .botonFormIndex {
+                display: flex;
+                justify-content: flex-end;
+
+                .boton {
+                    @extend %boton;
+
+                    // width: 100%;
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                }
             }
         }
     }
