--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html {
   margin: 0rem;
   padding: 0rem;
   box-sizing: border-box;
+  scroll-snap-type: y mandatory;
   background: linear-gradient(to top, rgba(224, 224, 224, 0.5) 0%, #ffffff 100%); }
   html body {
     font-size: 16px;
@@ -55,6 +56,10 @@ html {
   -moz-box-shadow: 0px 0px 11px 1px rgba(122, 120, 120, 0.38);
   padding: 3rem;
   border-radius: 1rem; }
+
+.mainIndex, .navBg, .formularioIndex, .footer {
+  scroll-snap-align: center;
+  scroll-snap-stop: always; }
 
 .header {
   height: 5rem; }
@@ -158,7 +163,8 @@ html {
         .mainIndex .formularioIndex form fieldset .camposFormIndex .campo {
           margin-bottom: 1rem;
           text-align: center; }
-        .mainIndex .formularioIndex form fieldset .camposFormIndex .correo, .mainIndex .formularioIndex form fieldset .camposFormIndex .textarea {
+        .mainIndex .formularioIndex form fieldset .camposFormIndex .correo,
+        .mainIndex .formularioIndex form fieldset .camposFormIndex .textarea {
           grid-column: 1 / 3; }
         .mainIndex .formularioIndex form fieldset .camposFormIndex label {
           color: white;
@@ -179,6 +185,9 @@ html {
       justify-content: flex-end; }
       .mainIndex .formularioIndex form .botonFormIndex .boton:hover {
         cursor: pointer; }
+
+.footer {
+  text-align: center; }
 
 @media screen and (max-width: 730px) {
   .mainIndex .serviciosIndex {
