ajustes a propiedades de scroll

--- a/scss/bases/_generales.scss
+++ b/scss/bases/_generales.scss
@@ -59,7 +59,7 @@ html {
     border-radius: 1rem;
 }
 
-.mainIndex,.navBg,.formularioIndex, .footer{
+.navBg, .mainIndex,.formularioIndex,.footer{
     scroll-snap-align: center;
     scroll-snap-stop:always;
 }
