--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -27,3 +27,12 @@ $font-weight: 200, 400, 700;
         justify-content: center;
         align-items: center;
 }
+
+//!CLASES EXTRAS
+
+.pushBotton{
+        width: 100%;
+        border: 3px solid red;
+        padding: 1.5rem;
+        border-radius: 1rem;
+}
