--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -36,3 +36,15 @@ $font-weight: 200, 400, 700;
         padding: 1.5rem;
         border-radius: 1rem;
 }
+
+.borderContendor{
+        border: 3px solid black;
+        border-radius: 5px;
+}
+
+.centrarFlex{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+}
