--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@
   justify-content: center;
   align-items: center; }
 
+.ajusteMensaje {
+  margin: 0 auto;
+  font-size: 13px; }
+
 html {
   font-size: 62.5%;
   margin: 0rem;
