--- a/scss/bases/_variables.scss
+++ b/scss/bases/_variables.scss
@@ -79,3 +79,8 @@ $font-weight: 200, 400, 700;
         justify-content: center;
         align-items: center;
 }
+
+.ajusteMensaje{
+        margin: 0 auto;
+        font-size: 13px;
+}
